--- a/app/assets/stylesheets/AdminLTE.css
+++ b/app/assets/stylesheets/AdminLTE.css
@@ -3279,9 +3279,11 @@ table.text-center th {
  */
 .profile-user-img {
   margin: 0 auto;
-  width: 100px;
+  width:  50px !important;
+  height:  50px !important;
   padding: 3px;
   border: 3px solid #d2d6de;
+  margin-left: -10px !important;
 }
 .profile-username {
   font-size: 21px;
