--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,7 +32,7 @@
 				  <% @Club.each do |club| %>
 				  <div class="list-group-item">	
 					   <div class="row">
-             <div class="col-md-5"><%= image_tag club.avatar.url ,class:"profile-user-img img-responsive img-circle" %></div>
+             <div class="col-md-5"><%= image_tag club.avatar.url ,class:"profile-club-img img-responsive img-circle" %></div>
             <div class="col-md-7 nav-text"><%= link_to club.name , club%></div>
           </div>
 
