--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           </div>
       <%end%>
       <%= yield %>
-    <footer class="main-footer">
+    <footer class="main-footer col-md-12">
         <div class="container">
           Bu proje Uzem Akademi 2015 için yapılmıştır.
         </div><!-- /.container -->
