--- a/app/assets/stylesheets/AdminLTE.css
+++ b/app/assets/stylesheets/AdminLTE.css
@@ -3279,6 +3279,12 @@ table.text-center th {
  */
 .profile-user-img {
   margin: 0 auto;
+  width:  100px;
+  padding: 3px;
+  border: 3px solid #d2d6de;
+}
+.profile-club-img {
+  margin: 0 auto;
   width:  50px !important;
   height:  50px !important;
   padding: 3px;
