--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -65,7 +65,7 @@
   </div>
   <div class="col-md-9">
     <div class="nav-tabs-custom">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-tabs margintop">
         <li class="active"><a href="#activity" data-toggle="tab">Etkinlikler</a></li>
         <li><a href="#infoss" data-toggle="tab">Duyurular</a></li>
         <li><a href="#hakkimizda" data-toggle="tab">Hakkımızda</a></li>
