--- a/app/assets/stylesheets/AdminLTE.css
+++ b/app/assets/stylesheets/AdminLTE.css
@@ -3279,7 +3279,8 @@ table.text-center th {
  */
 .profile-user-img {
   margin: 0 auto;
-  width:  100px;
+  width:  100px !important;
+  height:  100px !important;
   padding: 3px;
   border: 3px solid #d2d6de;
 }
@@ -3290,6 +3291,13 @@ table.text-center th {
   padding: 3px;
   border: 3px solid #d2d6de;
   margin-left: -10px !important;
+}
+.profile-club-img-2 {
+  margin: 0 auto;
+  width:  100px !important;
+  height:  100px !important;
+  padding: 3px;
+  border: 3px solid #d2d6de;
 }
 .profile-username {
   font-size: 21px;
