--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,43 +10,40 @@
         </div>
         <div class="panel-body">
         <!-- first_name and last_name type error. model de ikisi de string  -->
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "form_control"}) do |f| %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "form_control"}) do |f| %>
           <%= devise_error_messages! %>
 
            <div class="field">
-            <%= f.label :first_name %><br />
-            <%= f.text_field :first_name%>
+
+            <%= f.input :first_name, label:"Ad"%>
           </div>
             <div class="field">
-            <%= f.label :last_name %><br />
-            <%= f.text_field :last_name %>
+            <%= f.input :last_name, label:"Soyad"%>
           </div>
           <div class="field">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true %>
+
+            <%= f.input :email, autofocus: true, label:"E-Posta" %>
           </div>
 
           <div class="field">
-            <%= f.label :password %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "off" %>
+            <%= f.input :password, autocomplete: "off", label:"Parola" %>
+
+
           </div>
 
           <div class="field">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+            <%= f.input :password_confirmation, autocomplete: "off",label:"Parola Tekrar" %>
           </div>
 
 
 
           <div class="actions">
             <%= f.submit "Kayıt ol", class: "btn btn-primary" %>
+            <%= render "devise/shared/links" %>
           </div>
         <% end %>
 
-        <%= render "devise/shared/links" %>
+        
         </div>
         </div>
       </div>
