--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -4,12 +4,15 @@
 <div class="row">
   <div class="col-md-12">
   <div class="box box-primary">
-      <div class="box-body">
-  <h2><%= @info.title %></h2> </br>
-    <p>
-	  <%= image_tag @info.avatar.url  %></br></br>
-	  <%= @info.content %>
-	</p>
+    <div class="box-body">
+     <h2 class="info-header col-md-2"><%= @info.title %></h2> </br>
+    
+    <div class="row"></div>
+	  <div class="col-md-6"><%= image_tag @info.avatar.url,class:"info-image" %></div>
+    <div class="col-md-6 info-content"><%= @info.content %></div>
+    </div>
+
+	 
 	  </div>
 	</div>
   </div><!-- /.col -->
