--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -5,7 +5,7 @@
     <!-- Profile Image -->
     <div class="box box-primary">
       <div class="box-body box-profile">
-        <%= image_tag @club.avatar.url ,height: '125', width: '125', class:"profile-user-img img-responsive img-circle" %>
+        <%= image_tag @club.avatar.url ,height: '125', width: '125', class: "profile-user-img img-responsive img-circle" %>
         <h3 class="profile-username text-center"><%= @club.name%></h3>
         <p class="text-muted text-center">  </p>
       </div><!-- /.box-body -->
@@ -14,10 +14,11 @@
   <div class="col-md-9">
   <div class="box box-primary">
       <div class="box-body">
-    <h2><%= @notice.title %></h2> 
-	<%= image_tag @notice.avatar.url %>
-	</br></br>
-	<p>
+    <h3><%= @notice.title %></h3>
+    <p style="margin-top: -12px ; margin-left: 20px ; font-size: 10px">Eklenme Tarihi : <%= @notice.created_at %> </p>
+	<%= image_tag @notice.avatar.url , class: "col-md-offset-2 col-md-8" %>
+
+	<p class="col-md-offset-2 col-md-8" style="padding-top: 15px">
 	  <%= @notice.content %>
 	</p>
     </div>
