--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -21,14 +21,18 @@
       </div>
   </div>   
   </div><!-- /.col -->
-  <div class="col-md-7">
-    <h2><%= @activity.title %></h2> 
-        <p>
-           <%= image_tag @activity.avatar.url  %></br></br>
-          <%= @activity.description %>
-        </p>
+  <div class="col-md-9">
+    <div class="box box-primary">
+      <div class="box-body">
+    <h3><%= @activity.title %></h3>
+    <p style="margin-top: -12px ; margin-left: 20px ; font-size: 10px">Eklenme Tarihi : <%= @activity.created_at %></p>
+    <%= image_tag @activity.avatar.url , class: "col-md-offset-2 col-md-8" %>
+        <p class="col-md-offset-2 col-md-8" style="padding-top: 15px"><%= @activity.description %></p>
   </div><!-- /.col -->
   
 </div>
+</div>
+</div>
+
 
 
