--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -100,6 +100,9 @@ background-position: top-left;
 	border-top: 3px solid #3C8DBC;
 	font-weight:700;
 	font-size: 18px;
+}
+.home-image-content{
+
 
 }
 .home-info-image{
@@ -111,10 +114,5 @@ background-position: top-left;
 	padding: 0px;
 	margin: 0px;
 	bottom: 15px;
-
 }
 
-.home-notice-content{
-
-	margin-left: 10px;
-}
