--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,7 +55,7 @@
         <h1 class="home-info-title" style="text-align:left; padding-left:6px"><%= link_to info.title, info ,class: "btn btn-md btn-default col-md-12" %></h1>
         <p class="glyphicon glyphicon-time col-md-12" > Oluşturulma Zamanı: <%= info.created_at %></p>
         <%= image_tag info.avatar.url, class: "home-info-image col-md-4"%>
-        <p class="col-md-8"><%= info.content[0..250] %></p>
+        <p class="col-md-8"><%= info.content[0..200] %></p>
         <div class="col-md-4 pull-right"><%= link_to "Devamını Oku" , info ,class: "btn btn-md btn-info" %></div>
       </div>
       <% end %>
@@ -67,7 +67,7 @@
 <div class="col-md-3">
   <!-- Custom Tabs (Pulled to the right) -->
   <div class="nav-tabs-custom">
-    <ul class="nav nav-tabs pull-right">
+    <ul class="nav nav-tabs ">
       <li class="active"><a href="#tab_1-1" data-toggle="tab" aria-expanded="true">Etkinlikler</a></li>
       <li class=""><a href="#tab_2-2" data-toggle="tab" aria-expanded="false">Duyurular</a></li>
       <li class="pull-left header"><i class="fa fa-th"></i>  </li>
@@ -83,11 +83,20 @@
       </div><!-- /.tab-pane -->
 
       <div class="tab-pane" id="tab_2-2">
-        <div class="list-group-item">
+        <div class="list-group">
+        
           <% @Notice.each do |notice| %>
-          <%= image_tag notice.avatar.url, class: "home-image-content" %>
-          <%= link_to notice.title, notice, class: "home-notice-content" %>
+          <div class="list-group-item">
+          <div class="row">
+          <span class="col-md-5"><%= image_tag notice.avatar.url, class: "home-image-content profile-club-img img-responsive img-circle" %></span>
+          <span class="col-md-7" style=""><%= link_to notice.title, notice, class: "nav-text" %></span> 
+          </div>
+          </div>
+          
           <% end %>
+        </div>
+        </div>
+        </div>
         </div>
       </div>
     </div><!-- /.tab-content -->
