--- a/app/assets/stylesheets/AdminLTE.css
+++ b/app/assets/stylesheets/AdminLTE.css
@@ -3292,6 +3292,14 @@ table.text-center th {
   border: 3px solid #d2d6de;
   margin-left: -10px !important;
 }
+.profile-icon-img {
+  margin: 0 auto;
+  width:  25px !important;
+  height:  25px !important;
+  padding: 3px;
+  border: 3px solid #d2d6de;
+  margin-left: -10px !important;
+}
 .profile-club-img-2 {
   margin: 0 auto;
   width:  100px !important;
