--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,9 +18,11 @@
         </div>
         <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
           <span class="fa fa-angle-left"></span>
+          <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
           <span class="fa fa-angle-right"></span>
+          <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
     </div><!-- /.box-body -->
