--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,11 +16,11 @@
 
           </div>
         </div>
-        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-          <span class="fa fa-angle-left"></span>
+        <a class=" left carousel-control aconfig" href="#carousel-example-generic" data-slide="prev">
+          <span class="fa fa-angle-left "></span>
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+        <a class="right carousel-control aconfig" href="#carousel-example-generic" data-slide="next">
           <span class="fa fa-angle-right"></span>
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
