--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,9 @@
       <header class="main-header">
         <nav class="navbar navbar-static-top">
           <div class="container">
+          <%= image_tag   "omu.jpg",class:"profile-icon-img" %>
             <div class="navbar-header">
+
               <%= link_to "SksKulupler", root_path, class:"navbar-brand" %>
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                 <i class="fa fa-bars"></i>
