--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -84,20 +84,20 @@ background-position: top-left;
 	margin-top: 10px !important;
 }
 .info-image{
-	width: 500px;
+	width: 350px;
+	position: relative;
 	padding: 5px auto;
 	border-radius: 5px;
-	border:5px solid #e57373;
+	border:5px solid #3C8DBC;
 }
 .info-header{
-	font-size: 18px;
+	font-size: 25px;
+	border-bottom:1px solid gray;
+
 	font-weight: 700;
-	color: gray;
-	border-top: 3px solid #3C8DBC;
-	border-bottom:3px solid #e57373;
 }
 .info-content{
-	border-top: 3px solid #3C8DBC;
+	margin-left: 15px;
 	font-weight:700;
 	font-size: 18px;
 }
