--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -2,19 +2,27 @@
 <p id="notice"><%= notice %></p>
 
 <div class="row">
-  <div class="col-md-12">
-  <div class="box box-primary">
+  <div class="col-md-10 col-md-offset-2">
+    <div class="box box-primary">
     <div class="box-body">
-     <h2 class="info-header col-md-2"><%= @info.title %></h2> </br>
-    
-    <div class="row"></div>
-	  <div class="col-md-6"><%= image_tag @info.avatar.url,class:"info-image" %></div>
-    <div class="col-md-6 info-content"><%= @info.content %></div>
-    </div>
+    <h1 class="info-header col-md-6"><%= @info.title %></h1>
+     <p class="glyphicon glyphicon-time col-md-12" > Oluşturulma Zamanı: <%= @info.created_at %></p>
+</div>
+<div class="row"> 
 
-	 
+      <div class="col-md-5 info-content"><%= @info.content %></div>
+      <div class="col-md-5"><%= image_tag @info.avatar.url,class:"info-image" %></div>
+</div>
+
+    </div>
+    </div>
+    </div>
+    </div>
 	  </div>
 	</div>
-  </div><!-- /.col -->
+  </div>
+
 </div>
+
+
 
