--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
     <footer class="main-footer col-md-12">
         <div class="container">
           Bu proje Uzem Akademi 2015 için yapılmıştır.
+          <%= link_to "Omü Anasayfa" , "http://www.omu.edu.tr/",style:"float:right;",class: "btn btn-md btn-info" %></div>
         </div><!-- /.container -->
       </footer>
     </div><!-- ./wrapper -->
