--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,13 +9,22 @@
             <%= image_tag user.avatar.url ,height: '25', width: '25' %>
         <%end%>
     </div>
-    <div class="col-md-8" >
+    <div class="col-md-7" >
         <%=user.first_name%>  <%=user.last_name%>  <%=user.email%>
     </div>
    
         
-    <div class="col-md-3">
+    <div class="col-md-4">
         <%= link_to "Düzenle", edit_admin_user_path(user.id), class:"btn btn-default" %>
+        <%if user.admin?  %>
+             <%= link_to "Admin Sil", delete_admin_admin_user_path(user), class: "btn btn-warning", data: {confirm: "Bu kişiyi adminlikten çıkarmak istediğinize eminmisiniz?"}%>
+       
+            
+        <%else%>
+        <%= link_to "Admin ata", add_admin_admin_user_path(user), class: "btn btn-warning", data: {confirm: "Bu kişiyi admin olarak atayacakmisiniz?"}%>
+        <%end%>
+
+
         <%= link_to "Sil", admin_user_path(user.id), class:"btn btn-danger" , method: :delete , data: {confirm: "Emin misiniz?"} %>
     </div> 
     </div>
